--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
     <title>Document</title>
-    <link href={%static 'styles.css'%} rel='stylesheet' />
   </head>
+
   <body>
-    {%block content%} {% endblock %}
+    <script src="{%static 'script.js' %}"></script>
+    {%block content%}{% endblock %}
   </body>
 </html>
