--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -1,3 +1,13 @@
 {% extends 'base.html' %} {%block content%}
-<h1>Home Page</h1>
+<div>
+  <h1>Home Page</h1>
+</div>
+
+<div>
+  <a href="{%url 'order-page'%}">Order</a>
+  <a href="{%url 'cart-page'%}">Store</a>
+  <a href="{%url 'login'%}">Login</a>
+  <a href="{%url 'register'%}">Register</a>
+  <a href="{%url 'logout'%}">Logout</a>
+</div>
 {% endblock %}
