--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -134,7 +134,7 @@
             {% endfor %}
             <div class="mt-4">
              
-                <a href="{% url 'register' %}" class="ml-2"
+                <a href="{% url 'register-page' %}" class="ml-2"
                   >
               
               <div class="d-flex justify-content-center links colorl">
