--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="{% static 'styles.css' %}" />
     <title>Document</title>
   </head>
 
   <body>
-    <script src="{%static 'script.js' %}"></script>
+    <script src="{%static 'store.js' %}" async></script>
     {%block content%}{% endblock %}
   </body>
 </html>
