--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %} {%block content%}
-<div>
-  <h1>Home Page</h1>
-  <p>Welcome, {{user}}</p>
-</div>
 
-<div>
-  <a href="{%url 'order-page'%}">Order</a>
-  <a href="{%url 'cart-page'%}">Store</a>
-  <a href="{%url 'login-page'%}">Login</a>
-  <a href="{%url 'register-page'%}">Register</a>
-  <a href="{%url 'logout'%}">Logout</a>
-</div>
+<body>
+  <div></div>
+
+  <div class="navbar">
+    <ul>
+      <a href="{%url 'order-page'%}">Order</a>
+      <a href="{%url 'cart-page'%}">Menu</a>
+      <a href="{%url 'login-page'%}">Associate Login</a>
+      <a href="{%url 'register-page'%}">Associate Register</a>
+      <a href="{%url 'logout'%}">Logout</a>
+    </ul>
+  </div>
+</body>
+
 {% endblock %}
