--- a/HUB/templates/store.html
+++ b/HUB/templates/store.html
@@ -1,64 +1,92 @@
 {% extends 'base.html' %} {%block content%}
-
-    <body>
-    <header class="main-header">
-      <nav class="main-nav nav">
-        
-      </nav>
-     
-    </header>
-    
-
-        <select class="selectme">
-        <option value="0">None</option>
-        <option value="1">Winter</option>
-        <option value="2">Spring</option>
-        <option value="3">Summer</option>
-        </select>
-    
-        <h2 class="section-header" id="select-name"></h2>
-        <div id="divid">
-            <div class="shop-items">
-            
-
-        
-    
-                <div class="shop-items spring-cloth"></div>
-        
-                </section>
-            
-            </div> 
+<body>
+  <header class="main-header">
+    <nav class="main-nav nav"></nav>
+    <h1 class="band-name band-name-large"></h1>
+  </header>
+  <section class="container content-section">
+    <div class="shop-items">
+      <div class="shop-item">
+        <span class="shop-item-title">Cinnabun as</span>
+        <img class="shop-item-image" src="" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$12.99</span>
+          <button class="btn btn-primary shop-item-button" type="button">
+            ADD TO CART
+          </button>
         </div>
-    <section class="container content-section">
-      <h2 class="section-header">CART</h2>
-      <div class="cart-row">
-        <span class="cart-item cart-header cart-column">ITEM</span>
-        <span class="cart-price cart-header cart-column">PRICE</span>
-        <span class="cart-quantity cart-header cart-column">QUANTITY</span>
       </div>
-      <div class="cart-items"></div>
-      <div class="cart-total">
-        <strong class="cart-total-title">Total</strong>
-        <span class="cart-total-price">$0</span>
+      <div class="shop-item">
+        <span class="shop-item-title">2</span>
+        <img class="shop-item-image" src="" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$14.99</span>
+          <button class="btn btn-primary shop-item-button" type="button">
+            ADD TO CART
+          </button>
+        </div>
       </div>
-      <button class="btn btn-primary btn-purchase" type="button">
-        PURCHASE
-      </button>
-    </section>
-    <footer class="main-footer">
-      <div class="container main-footer-container">
-        <h3 class="band-name">Weather or Not</h3>
-        <ul class="nav footer-nav">
-          
-          <li>
+      <div class="shop-item">
+        <span class="shop-item-title">3</span>
+        <img class="shop-item-image" src="" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$9.99</span>
+          <button class="btn btn-primary shop-item-button" type="button">
+            ADD TO CART
+          </button>
+        </div>
+      </div>
+      <div class="shop-item">
+        <span class="shop-item-title"> 4</span>
+        <img class="shop-item-image" src="" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$19.99</span>
+          <button class="btn btn-primary shop-item-button" type="button">
+            ADD TO CART
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container content-section">
+    <div class="shop-items">
+      <div class="shop-item">
+        <span class="shop-item-title">T-Shirt</span>
+        <img class="shop-item-image" src="" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$19.99</span>
+          <button class="btn btn-primary shop-item-button" type="button">
+            ADD TO CART
+          </button>
+        </div>
+      </div>
+      <div class="shop-item">
+        <span class="shop-item-title">Coffee Cup</span>
+        <img class="shop-item-image" src="" />
+        <div class="shop-item-details">
+          <span class="shop-item-price">$6.99</span>
+          <button class="btn btn-primary shop-item-button" type="button">
+            ADD TO CART
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container content-section">
+    <h2 class="section-header">CART</h2>
+    <div class="cart-row">
+      <span class="cart-item cart-header cart-column">ITEM</span>
+      <span class="cart-price cart-header cart-column">PRICE</span>
+      <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+    </div>
+    <div class="cart-items"></div>
+    <div class="cart-total">
+      <strong class="cart-total-title">Total</strong>
+      <span class="cart-total-price">$0</span>
+    </div>
+    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+  </section>
+  <footer class="main-footer"></footer>
+</body>
 
-          
-          </li>
-        </ul>
-      </div>
-      
-    </footer>
-  </body>
-   
-  
 {%endblock%}
