--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -1,17 +1,5 @@
 {% extends 'base.html' %} {%block content%}
 
-<body>
-  <div></div>
-
-  <div class="navbar">
-    <ul>
-      <a href="{%url 'order-page'%}">Order</a>
-      <a href="{%url 'cart-page'%}">Menu</a>
-      <a href="{%url 'login-page'%}">Associate Login</a>
-      <a href="{%url 'register-page'%}">Associate Register</a>
-      <a href="{%url 'logout'%}">Logout</a>
-    </ul>
-  </div>
-</body>
+<body></body>
 
 {% endblock %}
