--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %} {%block content%}
 
-<body></body>
+<body>
+  <div class="homehours">
+    <p>Hours</p>
+
+    <p>Tues - Fri 6:30am - 2pm</p>
+    <p>_________________________</p>
+    <p>Saturday 8am - 2pm</p>
+    <p>__________________________</p>
+    <p>Sunday and Monday Closed</p>
+
+    <p>Follow Us</p>
+    <img src="facebook.png" />
+    <img src="instagram.png" />
+  </div>
+</body>
 
 {% endblock %}
