--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -22,14 +22,14 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        background: white;
+        background: #83c7c0;
       }
       .user_card {
         width: 500px;
         height: 30em;
         margin-top: auto;
         margin-bottom: auto;
-        background: rgb(0 33 113);
+        background: black;
         position: relative;
         display: flex;
         justify-content: center;
@@ -57,23 +57,26 @@
         background: white;
         color: black;
       }
+      .login_btn:hover {
+        background: #83c7c0;
+      }
       .login_btn:focus {
-        box-shadow: none !important;
-        outline: 0px !important;
+        box-shadow: none ;
+        outline: 0px ;
       }
       .login_container {
         padding: 0 2rem;
       }
       .input-group-text {
-        background: #f7ba5b !important;
-        color: white !important;
-        border: 0 !important;
+        background: #f7ba5b ;
+        color: white;
+        border: 0 ;
         border-radius: 0.25rem 1 1 0.5rem;
       }
       .input_user,
       .input_pass:focus {
-        box-shadow: none !important;
-        outline: 0px !important;
+        box-shadow: none;
+        outline: 0px;
       }
 
       #messages {
@@ -83,8 +86,9 @@
         margin-top: 10px;
       }
       .box1 {
-        background: grey;
-        border: solid 6px darkblue;
+        background: salmon;
+        border: solid 6px black;
+        border-radius: 10em;
         height: 40em;
         margin-top: 5em;
       }
@@ -93,7 +97,11 @@
         margin-left: -1em;
       }
       .colorl {
-        color: grey;
+        color: blue;
+      }
+      .colorl:hover {
+        color: white;
+        text-decoration: none;
       }
       .tb {
         height: 3em;
