--- a/HUB/templates/order.html
+++ b/HUB/templates/order.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %} {%block content%}
-<h1>Order Page</h1>
-<a href="{%url 'home-page'%}">Home</a>
 
-<form method="POST">
-  {% csrf_token %} {{form.as_p}}
-  <input type="submit" name="submit" />
-</form>
+<div class="orderBack">
+  <h1>Order Form</h1>
+  <form method="POST">
+    {% csrf_token %} {{form.as_p}}
+    <input type="submit" name="submit" />
+  </form>
+</div>
 
 {% endblock %}
