--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -11,11 +11,14 @@
 
   <body>
     <div class="navBackground">
-      <a href="{%url 'order-page'%}">Order</a>
-      <a href="{%url 'cart-page'%}">Menu</a>
-      <a href="{%url 'login-page'%}">Associate Login</a>
-      <a href="{%url 'register-page'%}">Associate Register</a>
-      <a href="{%url 'logout'%}">Logout</a>
+      <ul>
+        <li><a href="{%url 'home-page'%}">Home</a></li>
+        <li><a href="{%url 'order-page'%}">Order</a></li>
+        <li><a href="{%url 'cart-page'%}">Menu</a></li>
+        <li><a href="{%url 'login-page'%}">Login</a></li>
+        <li><a href="{%url 'register-page'%}">Register</a></li>
+        <li><a href="{%url 'logout'%}">Logout</a></li>
+      </ul>
     </div>
     <script src="{%static 'store.js' %}" async></script>
     {%block content%}{% endblock %}
