--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -12,6 +12,7 @@
   <body>
     <div class="navBackground">
       <ul>
+        <p>The Hub</p>
         <li><a href="{%url 'home-page'%}">Home</a></li>
         <li><a href="{%url 'order-page'%}">Order</a></li>
         <li><a href="{%url 'cart-page'%}">Menu</a></li>
