--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -2,12 +2,12 @@
 
 <body>
   <div class="homehours">
-    <p>Hours</p>
+    <p>_____ Hours _____</p>
 
     <p>Tues - Fri 6:30am - 2pm</p>
     <p>_________________________</p>
     <p>Saturday 8am - 2pm</p>
-    <p>__________________________</p>
+    <p>_________________________</p>
     <p>Sunday and Monday Closed</p>
 
     <p>Follow Us</p>
