--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -2,18 +2,55 @@
 
 <body>
   <div class="homehours">
-    <p>_____ Hours _____</p>
+    <p>Hours</p>
 
     <p>Tues - Fri 6:30am - 2pm</p>
-    <p>_________________________</p>
+    <p style="font-weight: bolder; color: #83c7c0">
+      ___________________________
+    </p>
     <p>Saturday 8am - 2pm</p>
-    <p>_________________________</p>
+    <p style="font-weight: bolder; color: #83c7c0">
+      ___________________________
+    </p>
     <p>Sunday and Monday Closed</p>
 
-    <p>Follow Us</p>
-    <img src="facebook.png" />
-    <img src="instagram.png" />
+    <div class="contactimage">
+      <h3 class="followus">Follow Us</h3>
+      <img class="facebookImage" src="static/images/facebook.png" />
+    </div>
+  </div>
+  <div class="reviewsBackground">
+    <p>WHAT PEOPLE SAY</p>
+    <div>
+      <h3>Tina Ward Sikma</h3>
+      <p>
+        I went to The Hub Bistro today for the first time. The food and coffee
+        was delicious but the visit with the precious owners is what made the
+        experience great. You should go support this young family. I can't eat
+        them but those pastries looked AMAZING! Eat more for me.
+      </p>
+    </div>
+    <div>
+      <h3>Katie Lund</h3>
+      <p>
+        The Hub Bistro is a wonderful place for breakfast and lunch! Their
+        coffee is absolutely delicious and they offer a sugar free option for
+        every coffee flavor. Their cinnamon roll is one of the best I've ever
+        had. The service is friendly and warm and extremely accommodating. I
+        don't know the owner personally, but just from the handful of times I've
+        met and spoken with her, I can tell she is a very special person. Just
+        precious! If you're in Water Valley and don't make a stop here, you're
+        sorely missing out.
+      </p>
+    </div>
+    <div>
+      <h3>Deana Terry</h3>
+      <p>
+        Food is so good! Soup yesterday was AMAZING! Had greek salad today, just
+        as good. Breakfast was also yummy! Would definitely recommend!
+      </p>
+    </div>
   </div>
 </body>
 
-{% endblock %}
+{%endblock%}
