--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -11,15 +11,13 @@
 
   <body>
     <div class="navBackground">
-      <ul>
-        <p>The Hub</p>
-        <li><a href="{%url 'home-page'%}">Home</a></li>
-        <li><a href="{%url 'order-page'%}">Order</a></li>
-        <li><a href="{%url 'cart-page'%}">Menu</a></li>
-        <li><a href="{%url 'login-page'%}">Login</a></li>
-        <li><a href="{%url 'register-page'%}">Register</a></li>
-        <li><a href="{%url 'logout'%}">Logout</a></li>
-      </ul>
+      <p class="theHubWord">The Hub</p>
+      <a href="{%url 'logout'%}">Logout</a>
+      <a href="{%url 'register-page'%}">Register</a>
+      <a href="{%url 'login-page'%}">Login</a>
+      <a href="{%url 'gallery-page'%}">Gallery</a>
+      <a href="{%url 'cart-page'%}">Menu</a>
+      <a href="{%url 'home-page'%}">Home</a>
     </div>
     <script src="{%static 'store.js' %}" async></script>
     {%block content%}{% endblock %}
