--- a/HUB/templates/store.html
+++ b/HUB/templates/store.html
@@ -1,113 +1,28 @@
 {% extends 'base.html' %} {%block content%}
 <body>
-  <div>
-    {%for product in all_products%} {%if product.category == 'Espresso'%}
-    <p>{{product.name}}</p>
-    {% endif %} {% endfor %}
+  <div class="row">
+    {%for product in all_products%}
+    <div class="col-lg-4">
+      <div class="box-element">
+        <h4>{{product.name}}</h4>
+        <p>{{product.desc}}</p>
+        <p><i>{{product.price1}}</i></p>
+        <p><i>{{product.price2}}</i></p>
+        <p><i>{{product.price3}}</i></p>
+
+        <button data-product="{{product.id}}" data-action="add" class="addBttn">
+          Add
+        </button>
+      </div>
+    </div>
+    {% endfor %}
   </div>
 
-  <header class="main-header">
-    <nav class="main-nav nav"></nav>
-    <h1 class="band-name band-name-large"></h1>
-  </header>
-  <h2>Brewed Coffee</h2>
-  <div>
-    <div class="shop-items">
-      <div class="shop-item">
-        <span class="shop-item-title">burro</span>
-        <img class="shop-item-image" src="" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$4.50</span>
-          <button class="btn btn-primary shop-item-button" type="button">
-            ADD TO CART
-          </button>
-        </div>
-      </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="box-element"></div>
     </div>
   </div>
-  <section class="container content-section">
-    <div class="shop-items">
-      <div class="shop-item">
-        <span class="shop-item-title">Cinnabun</span>
-        <img class="shop-item-image" src="" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$12.99</span>
-          <button class="btn btn-primary shop-item-button" type="button">
-            ADD TO CART
-          </button>
-        </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title">2</span>
-        <img class="shop-item-image" src="" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$14.99</span>
-          <button class="btn btn-primary shop-item-button" type="button">
-            ADD TO CART
-          </button>
-        </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title">3</span>
-        <img class="shop-item-image" src="" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$9.99</span>
-          <button class="btn btn-primary shop-item-button" type="button">
-            ADD TO CART
-          </button>
-        </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title"> 4</span>
-        <img class="shop-item-image" src="" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$19.99</span>
-          <button class="btn btn-primary shop-item-button" type="button">
-            ADD TO CART
-          </button>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="container content-section">
-    <div class="shop-items">
-      <div class="shop-item">
-        <span class="shop-item-title">T-Shirt</span>
-        <img class="shop-item-image" src="" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$19.99</span>
-          <button class="btn btn-primary shop-item-button" type="button">
-            ADD TO CART
-          </button>
-        </div>
-      </div>
-      <div class="shop-item">
-        <span class="shop-item-title">Coffee Cup</span>
-        <img class="shop-item-image" src="" />
-        <div class="shop-item-details">
-          <span class="shop-item-price">$6.99</span>
-          <button class="btn btn-primary shop-item-button" type="button">
-            ADD TO CART
-          </button>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="container content-section">
-    <h2 class="section-header">CART</h2>
-    <div class="cart-row">
-      <span class="cart-item cart-header cart-column">ITEM</span>
-      <span class="cart-price cart-header cart-column">PRICE</span>
-      <span class="cart-quantity cart-header cart-column">QUANTITY</span>
-    </div>
-    <div class="cart-items"></div>
-    <div class="cart-total">
-      <strong class="cart-total-title">Total</strong>
-      <span class="cart-total-price">$0</span>
-    </div>
-    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
-  </section>
-  <footer class="main-footer"></footer>
 </body>
 
 {%endblock%}
