--- a/HUB/templates/gallery.html
+++ b/HUB/templates/gallery.html
@@ -1,39 +1,236 @@
 {% extends 'base.html' %} {%block content%}
-<img class="galleryimg" src="/static/images/pics/cake1.JPG" />
-<img class="galleryimg" src="/static/images/pics/cake2.JPG" />
-<img class="galleryimg" src="/static/images/pics/chickensalad1.JPG" />
-<img class="galleryimg" src="/static/images/pics/coffee1.JPG" />
-<img class="galleryimg" src="/static/images/pics/coffee2.JPG" />
-<img class="galleryimg" src="/static/images/pics/coffee3.JPG" />
-<img class="galleryimg" src="/static/images/pics/coffee4.JPG" />
-<img class="galleryimg" src="/static/images/pics/cookies1.JPG" />
-<img class="galleryimg" src="/static/images/pics/cookies2.JPG" />
-<img class="galleryimg" src="/static/images/pics/cookies3.JPG" />
-<img class="galleryimg" src="/static/images/pics/cr1.JPG" />
-<img class="galleryimg" src="/static/images/pics/cr2.JPG" />
-<img class="galleryimg" src="/static/images/pics/cr3.JPG" />
-<img class="galleryimg" src="/static/images/pics/cr4.JPG" />
-<img class="galleryimg" src="/static/images/pics/cr5.JPG" />
-<img class="galleryimg" src="/static/images/pics/cr6.JPG" />
-<img class="galleryimg" src="/static/images/pics/IMG_6253.JPG" />
-<img class="galleryimg" src="/static/images/pics/IMG_6259.JPG" />
-<img class="galleryimg" src="/static/images/pics/IMG_6260.JPG" />
-<img class="galleryimg" src="/static/images/pics/IMG_6261.JPG" />
-<img class="galleryimg" src="/static/images/pics/loafs.JPG" />
-<img class="galleryimg" src="/static/images/pics/pastries1.JPG" />
-<img class="galleryimg" src="/static/images/pics/pastries2.JPG" />
-<img class="galleryimg" src="/static/images/pics/pastries3.JPG" />
-<img class="galleryimg" src="/static/images/pics/pastries4.JPG" />
-<img class="galleryimg" src="/static/images/pics/pastries5.JPG" />
-<img class="galleryimg" src="/static/images/pics/quasadilla1.JPG" />
-<img class="galleryimg" src="/static/images/pics/quiche1.JPG" />
-<img class="galleryimg" src="/static/images/pics/quiche2.JPG" />
-<img class="galleryimg" src="/static/images/pics/salad1.JPG" />
-<img class="galleryimg" src="/static/images/pics/sandwich1.JPG" />
-<img class="galleryimg" src="/static/images/pics/sandwich2.JPG" />
-<img class="galleryimg" src="/static/images/pics/sandwich3.JPG" />
-<img class="galleryimg" src="/static/images/pics/sandwich4.JPG" />
-<img class="galleryimg" src="/static/images/pics/sandwich5.JPG" />
-<img class="galleryimg" src="/static/images/pics/wrap1.JPG" />
 
+<div class="slideshow-container">
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cake1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cake2.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/chickensalad1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/coffee1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">5 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/coffee2.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">6 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/coffee3.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">7 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/coffee4.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">8 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cookies1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">9 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cookies2.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">10 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cookies3.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">11 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cr1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">12 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cr2.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">13 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cr3.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">14 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cr4.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">15 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cr5.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">16 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/cr6.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">17 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/loafs.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">18 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/pastries1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">19 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/pastries2.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">20 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/pastries3.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">21 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/pastries4.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">22 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/pastries5.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">23 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/quasadilla1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">24 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/quiche1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">25 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/quiche2.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">26 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/salad1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">27 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/sandwich1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">28 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/sandwich2.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">29 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/sandwich3.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">30 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/sandwich4.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">31 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/sandwich5.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">32 / 15</div>
+    <img class="galleryimg" src="/static/images/pics/wrap1.JPG" />
+    <div class="text">Caption Text</div>
+  </div>
+</div>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+<div style="text-align: center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span>
+  <span class="dot" onclick="currentSlide(7)"></span>
+  <span class="dot" onclick="currentSlide(8)"></span>
+  <span class="dot" onclick="currentSlide(9)"></span>
+  <span class="dot" onclick="currentSlide(10)"></span>
+  <span class="dot" onclick="currentSlide(11)"></span>
+  <span class="dot" onclick="currentSlide(12)"></span>
+  <span class="dot" onclick="currentSlide(13)"></span>
+  <span class="dot" onclick="currentSlide(14)"></span>
+  <span class="dot" onclick="currentSlide(15)"></span>
+  <span class="dot" onclick="currentSlide(16)"></span>
+  <span class="dot" onclick="currentSlide(17)"></span>
+  <span class="dot" onclick="currentSlide(18)"></span>
+  <span class="dot" onclick="currentSlide(19)"></span>
+  <span class="dot" onclick="currentSlide(20)"></span>
+  <span class="dot" onclick="currentSlide(21)"></span>
+  <span class="dot" onclick="currentSlide(22)"></span>
+  <span class="dot" onclick="currentSlide(23)"></span>
+  <span class="dot" onclick="currentSlide(24)"></span>
+  <span class="dot" onclick="currentSlide(25)"></span>
+  <span class="dot" onclick="currentSlide(26)"></span>
+  <span class="dot" onclick="currentSlide(27)"></span>
+  <span class="dot" onclick="currentSlide(28)"></span>
+  <span class="dot" onclick="currentSlide(29)"></span>
+  <span class="dot" onclick="currentSlide(30)"></span>
+  <span class="dot" onclick="currentSlide(31)"></span>
+  <span class="dot" onclick="currentSlide(32)"></span>
+</div>
+
+<script>
+  var slideIndex = 1;
+  showSlides(slideIndex);
+
+  function plusSlides(n) {
+    showSlides((slideIndex += n));
+  }
+
+  function currentSlide(n) {
+    showSlides((slideIndex = n));
+  }
+
+  function showSlides(n) {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    if (n > slides.length) {
+      slideIndex = 1;
+    }
+    if (n < 1) {
+      slideIndex = slides.length;
+    }
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex - 1].style.display = "block";
+    dots[slideIndex - 1].className += " active";
+  }
+</script>
 {% endblock %}
