lunch april 7-Justin

--- a/HUB/templates/gallery.html
+++ b/HUB/templates/gallery.html
@@ -2,7 +2,7 @@
 
 <div class="slideshow-container">
   <div class="mySlides fade">
-    <div class="numbertext">1 / 15</div>
+    <div class="numbertext">Strawberry Cake</div>
     <img src="/static/images/pics/cake1.JPG" />
     <div class="text">Caption Text</div>
   </div>
@@ -49,7 +49,7 @@
   </div>
   <div class="mySlides fade">
     <div class="numbertext">10 / 15</div>
-    <img src="/static/images/pics/cookies3.JPG" />
+    <img class="galleryimg" src="/static/images/pics/cookies3.JPG" />
     <div class="text">Caption Text</div>
   </div>
   <div class="mySlides fade">
@@ -64,7 +64,7 @@
   </div>
   <div class="mySlides fade">
     <div class="numbertext">13 / 15</div>
-    <img class="galleryimg" rc="/static/images/pics/cr3.JPG" />
+    <img class="galleryimg" src="/static/images/pics/cr3.JPG" />
     <div class="text">Caption Text</div>
   </div>
   <div class="mySlides fade">
