--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %} {%block content%}
 <!DOCTYPE html>
 <html>
   <head>
@@ -155,3 +156,4 @@
     </div>
   </body>
 </html>
+{% endblock %}
