--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -17,9 +17,14 @@
       <a href="{%url 'login-page'%}">Login</a>
       <a href="{%url 'gallery-page'%}">Gallery</a>
       <a href="{%url 'cart-page'%}">Menu</a>
+      <a href="{%url 'aboutus-page'%}">About Us</a>
       <a href="{%url 'home-page'%}">Home</a>
     </div>
     <script src="{%static 'store.js' %}" async></script>
     {%block content%}{% endblock %}
   </body>
+  <footer class="footer">
+    <p class="footerWords">The Hub Bistro & Coffee House</p>
+    <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
+  </footer>
 </html>
