--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -20,10 +20,10 @@
     </div>
   </div>
   <div class="reviewsBackground">
-    <p>WHAT PEOPLE SAY</p>
+    <p class="whatPeopleSay">WHAT PEOPLE SAY</p>
     <div>
-      <h3>Tina Ward Sikma</h3>
-      <p>
+      <h3 class="reviewsNameTina">Tina Ward Sikma</h3>
+      <p class="tinaReviewParagraph">
         I went to The Hub Bistro today for the first time. The food and coffee
         was delicious but the visit with the precious owners is what made the
         experience great. You should go support this young family. I can't eat
@@ -31,8 +31,8 @@
       </p>
     </div>
     <div>
-      <h3>Katie Lund</h3>
-      <p>
+      <h3 class="reviewsNameKatie">Katie Lund</h3>
+      <p class="katieReviewParagraph">
         The Hub Bistro is a wonderful place for breakfast and lunch! Their
         coffee is absolutely delicious and they offer a sugar free option for
         every coffee flavor. Their cinnamon roll is one of the best I've ever
@@ -44,8 +44,8 @@
       </p>
     </div>
     <div>
-      <h3>Deana Terry</h3>
-      <p>
+      <h3 class="reviewsNameDeana">Deana Terry</h3>
+      <p class="deanaReviewParagraph">
         Food is so good! Soup yesterday was AMAZING! Had greek salad today, just
         as good. Breakfast was also yummy! Would definitely recommend!
       </p>
