--- a/HUB/static/styles.css
+++ b/HUB/static/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .navBackground a {
-  background-color: #83c7c0;
+  background-color: black;
   display: block;
   color: white;
   /* text-align: right; */
