--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -114,7 +114,7 @@
   </head>
   <body>
     <div class="navBackground">
-      <p class="theHubWord">The Hub</p>
+      <img class="theHubWord" src="static/images/hubLogo.png" />
     </div>
     <div class="container h-100">
       <div class="box1">
