--- a/HUB/static/register.css
+++ b/HUB/static/register.css
@@ -28,11 +28,8 @@ html {
 }
 
 .theHubWord {
-  font-family: niconne, fantasy;
-  font-size: 50px;
-  margin-left: 230px;
-  margin-top: 60px;
-  margin-bottom: -10px;
+  width: 20%;
+  height: 50%;
 }
 
 .navBackground {
