--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -16,8 +16,9 @@
       <a href="{%url 'register-page'%}">Register</a>
       <a href="{%url 'login-page'%}">Login</a>
       <a href="{%url 'gallery-page'%}">Gallery</a>
-      <a href="{%url 'cart-page'%}">Menu</a>
-      <a href="{%url 'aboutus-page'%}">About Us</a>
+      <a href="{%url 'menu-page'%}">Menu</a>
+      <a href="{%url ''%}"><img src="" /></a>
+
       <a href="{%url 'home-page'%}">Home</a>
     </div>
     <script src="{%static 'store.js' %}" async></script>
