--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -11,7 +11,7 @@
 
   <body class="bodybody">
     <div class="navBackground">
-      <p class="theHubWord">The Hub</p>
+      <img class="theHubWord" src="static/images/hubLogo.png" />
       {% comment %}
       <div class="cartImage">
         <a href="{%url 'cart-page'%}">
