--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -24,33 +24,44 @@
   <div class="reviewsBackground">
     <p class="whatPeopleSay">WHAT PEOPLE SAY</p>
     <div>
-      <h3 class="reviewsNameTina">Tina Ward Sikma</h3>
-      <p class="tinaReviewParagraph">
-        I went to The Hub Bistro today for the first time. The food and coffee
-        was delicious but the visit with the precious owners is what made the
-        experience great. You should go support this young family. I can't eat
-        them but those pastries looked AMAZING! Eat more for me.
-      </p>
+      <div class="divBox1">
+        <h3 class="reviewsName">Tina Ward Sikma</h3>
+        <p class="tinaReviewParagraph">
+          I went to The Hub Bistro today for the first time. The food and coffee
+          was delicious but the visit with the precious owners is what made the
+          experience great. You should go support this young family. I can't eat
+          them but those pastries looked AMAZING! Eat more for me.
+        </p>
+        <img class="quotationSize" src="static/images/newquotation.png"
+      </div>
     </div>
     <div>
-      <h3 class="reviewsNameKatie">Katie Lund</h3>
-      <p class="katieReviewParagraph">
-        The Hub Bistro is a wonderful place for breakfast and lunch! Their
-        coffee is absolutely delicious and they offer a sugar free option for
-        every coffee flavor. Their cinnamon roll is one of the best I've ever
-        had. The service is friendly and warm and extremely accommodating. I
-        don't know the owner personally, but just from the handful of times I've
-        met and spoken with her, I can tell she is a very special person. Just
-        precious! If you're in Water Valley and don't make a stop here, you're
-        sorely missing out.
-      </p>
+      <div class="divBox2">
+        <h3 class="reviewsName">Katie Lund</h3>
+
+        <p class="katieReviewParagraph">
+          The Hub Bistro is a wonderful place for breakfast and lunch! Their
+          coffee is absolutely delicious and they offer a sugar free option for
+          every coffee flavor. Their cinnamon roll is one of the best I've ever
+          had. The service is friendly and warm and extremely accommodating. I
+          don't know the owner personally, but just from the handful of times
+          I've met and spoken with her, I can tell she is a very special person.
+          Just precious! If you're in Water Valley and don't make a stop here,
+          you're sorely missing out.
+        </p>
+        <img class="quotationSize" src="static/images/newquotation.png"
+      </div>
     </div>
     <div>
-      <h3 class="reviewsNameDeana">Deana Terry</h3>
-      <p class="deanaReviewParagraph">
-        Food is so good! Soup yesterday was AMAZING! Had greek salad today, just
-        as good. Breakfast was also yummy! Would definitely recommend!
-      </p>
+      <div class="divBox3">
+        <h3 class="reviewsName">Deana Terry</h3>
+
+        <p class="deanaReviewParagraph">
+          Food is so good! Soup yesterday was AMAZING! Had greek salad today,
+          just as good. Breakfast was also yummy! Would definitely recommend!
+        </p>
+        <img class="quotationSize" src="static/images/newquotation.png"
+      </div>
     </div>
   </div>
 </body>
