--- a/HUB/static/styles.css
+++ b/HUB/static/styles.css
@@ -64,9 +64,9 @@ body {
 .reviewsBackground {
   background-color: #83c7c0;
   color: white;
-  padding: 10px;
-  margin-top: 200px;
-  margin-bottom: 500px;
+  padding: 10px 0 120px 0;
+  margin-top: 150px;
+  margin-bottom: 200px;
 }
 
 .whatPeopleSay {
@@ -227,4 +227,33 @@ img {
   margin: 2em;
   padding: 10px;
   border-radius: 20px;
+}
+
+.reviewsName {
+  color: #6b3b17;
+  text-align: center;
+}
+
+.divBox1 {
+  width: 300px;
+  padding: 50px;
+  margin: -60px 0 0 70px;
+}
+
+.divBox2 {
+  width: 300px;
+  padding: 50px;
+  margin: -364px 0 0 520px;
+}
+
+.divBox3 {
+  width: 300px;
+  padding: 50px;
+  margin: -457px 0 0 970px;
+}
+
+.quotationSize {
+  width: 60px;
+  height: 50px;
+  margin-left: 100px;
 }
